[gd_scene load_steps=5 format=3 uid="uid://p6me4a06pr0d"]

[ext_resource type="Script" uid="uid://cmp5nyo072wqf" path="res://survivor_game.gd" id="1_5mrb7"]
[ext_resource type="PackedScene" uid="uid://b4x4kivo8rdb3" path="res://player.tscn" id="1_8id3q"]
[ext_resource type="PackedScene" uid="uid://cayafetydvklq" path="res://pine_tree.tscn" id="2_kbdm8"]

[sub_resource type="Curve2D" id="Curve2D_kbdm8"]
_data = {
"points": PackedVector2Array(17.1487, 81.4564, -17.1487, -81.4564, -70, -46, 2.14359, 0, -2.14359, 0, 1969, -44, 113.61, -190.78, -113.61, 190.78, 1971, 1137, -94.318, 186.492, 94.318, -186.492, -64, 1148)
}
point_count = 4

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_5mrb7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1917.0
offset_bottom = 1088.0

[node name="Player" parent="." instance=ExtResource("1_8id3q")]
position = Vector2(640, 394)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-640, -394)
curve = SubResource("Curve2D_kbdm8")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-70, -46)
rotation = -1.77829

[node name="PineTree" parent="." instance=ExtResource("2_kbdm8")]
position = Vector2(230, 218)

[node name="PineTree2" parent="." instance=ExtResource("2_kbdm8")]
position = Vector2(396, 682)

[node name="PineTree3" parent="." instance=ExtResource("2_kbdm8")]
position = Vector2(928, 163)

[node name="PineTree4" parent="." instance=ExtResource("2_kbdm8")]
position = Vector2(1379, 347)

[node name="PineTree5" parent="." instance=ExtResource("2_kbdm8")]
position = Vector2(1104, 723)

[node name="PineTree6" parent="." instance=ExtResource("2_kbdm8")]
position = Vector2(1444, 871)

[node name="PineTree7" parent="." instance=ExtResource("2_kbdm8")]
position = Vector2(580, 946)

[node name="PineTree8" parent="." instance=ExtResource("2_kbdm8")]
position = Vector2(1708, 207)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.592157)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[connection signal="health_depelted" from="Player" to="." method="_on_player_health_depelted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
